# local-music-player

./: Cargo.toml
crates/hotkey_register/: Cargo.toml  build.rs
crates/hotkey_register/src/macos/: carbon_hotkey_binding.c  mod.rs
crates/music_player/: Cargo.toml
crates/music_player/src/: main.rs
crates/player/: Cargo.toml
crates/player/src/: error.rs  file.rs  lib.rs  new.rs
crates/player/src/player_stream/: controller.rs  mod.rs  output.rs
