[package]
name = "hotkey_register"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winuser", "errhandlingapi"]}

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.18"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"
